syntax = "proto3";

import "LogicScene.proto";
import "ClientCommandsUtil.proto";
import "DateTime.proto";

message PrintablePrice {
    string car_name = 6;
    repeated string key = 1;
    uint32 price = 3;
    string license = 4;
    bool is_first_purchase = 5;
}

message PrintablePrices {
    repeated PrintablePrice prices = 1;
}

message PrintableDriverAccount {
    string account_id = 1;
    repeated PGUID available_driver_guids = 2;
    PGUID current_driver_guid = 3;
    bool is_sandbox = 4;
}

message PrintableDriverProfile {
    PGUID guid = 1;
    string first_name = 2;
    string last_name = 3;
    string lumirank_name = 4;
    string nickname = 5;
    string nationality_alpha_3 = 6;
    int32 age = 7;
}

message PrintableDriverStatistics {
    PGUID guid = 1;
    float travelled_distance = 2;
    float consumed_fuel = 3;
    int32 first_places = 4;
    int32 second_places = 5;
    int32 third_places = 6;
    int32 pole_positions = 7;
    int32 started_races = 8;
    int32 finished_races = 9;
    int32 login_consecutive_days = 10;
    int32 total_login_days = 11;
    HumanReadableDateTimeData last_login_date = 12;
    int32 total_hours = 13;
    string last_session_statistics = 14;
}

message RankPerXpItem {
    uint32 value_max = 1;
    uint32 rank = 2;
    uint32 credits = 3;
}

message RankPerXpLogic {
    repeated RankPerXpItem item = 1;
}

message XpPerValueItem {
    uint32 value_max = 1;
    uint32 xp = 2;
}

message DriverXpCarLogic {
    string car_name = 1;
    uint32 on_first_driving_xp = 2;
}

message DriverXpTrackLogic {
    string track_name = 1;
    uint32 on_visiting_xp = 2;
}

message DriverXpEventLogic {
    string event_name = 1;
    uint32 on_attending_xp = 2;
    uint32 on_finalized_result = 3;
}

message DriverXpEventHistory {
    string event_name = 1;
    int32 total_attended_events = 2;
    uint64 total_on_attending_xp = 3;
    uint32 total_finalized_results = 4;
    uint64 total_on_finalized_result = 5;
}

message DriverXpGenericLogicRequest {
    PGUID driver_id = 100;
    PGUID car_id = 101;
    PGUID season_id = 102;
    uint32 event_index = 103;
    uint32 session_index = 104;
    uint32 hundredm = 1;
    float fuel_liter = 2;
    float energy_source = 5;
    EnergySourceType energy_source_type = 6;
    repeated uint32 tyre_compound = 3;
    repeated float tyre_tread = 4;
}

message DriverXpGenericLogicResponse {
    ClientCommandsResponse response = 1;
    uint32 hundredm = 2;
    float fuel_liter = 3;
    float energy_source = 7;
    EnergySourceType energy_source_type = 8;
    repeated uint32 tyre_compound = 5;
    repeated float tyre_tread = 6;
    PGUID car_id = 4;
}

message DriverXpRefuelRequest {
    PGUID driver_id = 100;
    PGUID car_id = 101;
    uint32 fuel_liters = 1;
}

message DriverXpRefuelResponse {
    ClientCommandsResponse response = 1;
    PGUID car_id = 101;
    uint32 fuel_liters = 2;
}

message DriverXpGenericLogicHistory {
    uint64 total_driver_kms = 1;
    uint64 total_fuel_liters = 2;
}

message DriverXpPerformanceLogic {
    repeated XpPerValueItem car_control = 1;
}

message DriverXpPerformanceHistory {
    XpPerValueItem car_control = 1;
}

message DriverXpOneTimeLogic {
    uint32 on_made_livery = 1;
    uint32 on_purchased_tuning_part = 2;
}

message DriverXpOneTimeHistory {
    bool made_livery = 1;
    bool purchased_tuning_part = 2;
}

message DriverXpPlayingTimeLogic {
    repeated XpPerValueItem consecutive_hours = 1;
    repeated XpPerValueItem consecutive_days = 2;
}

message DriverXpPlayingTimeHistory {
    XpPerValueItem consecutive_hours = 1;
    XpPerValueItem next_consecutive_hours = 2;
    string last_consecutive_start_date = 10;
    XpPerValueItem consecutive_days = 11;
    XpPerValueItem next_consecutive_days = 12;
}

message DriverXpHistory {
    DriverXpGenericLogicHistory generic_history = 1;
    repeated string visited_tracks = 3;
    repeated string driven_cars = 4;
    repeated DriverXpEventHistory event_history = 5;
    DriverXpPerformanceHistory performance_history = 6;
    DriverXpOneTimeHistory one_time_history = 7;
    DriverXpPlayingTimeHistory playing_time_history = 8;
    RankPerXpItem current_rank = 9;
    RankPerXpItem next_current_rank = 10;
}
