syntax = "proto3";

import "ClientCommandsUtil.proto";
import "DateTime.proto";
import "GameModeSelectionClientCommands.proto";

message ReplayMetadata {
    ReplayType type = 1;
    string name = 2;
    string filename = 3;
    string game_mode = 4;
    HumanReadableDateTimeData timestamp = 5;
    string car = 6;
    TrackItem track_item = 7;
    string layout = 8;
    float duration = 9;
    bool is_corrupted = 10;
    uint32 version = 11;
    GameModeType game_mode_type = 12;
    string description = 13;
    SeasonDefinitionType season_type = 14;
}

message ReplayGalleryRequestGallery {
    ReplayType type = 1;
}

message ReplayGalleryResponseGallery {
    ClientCommandsResponse response = 2;
    repeated ReplayMetadata replays = 3;
    
    reserved 1;
}

message ReplayGalleryRequestLoadReplay {
    ReplayType type = 1;
    string filename = 2;
}

message ReplayGalleryResponseLoadReplay {
    ReplayType type = 1;
    string filename = 2;
    ClientCommandsResponse response = 3;
}

message ReplayGalleryRequestMoveReplay {
    ReplayType type = 1;
    string filename = 2;
}

message ReplayGalleryResponseMoveReplay {
    ReplayType type = 1;
    string filename = 2;
    ClientCommandsResponse response = 3;
}

message ReplayGalleryRequestDeleteReplay {
    ReplayType type = 1;
    string filename = 3;
}

message ReplayGalleryResponseDeleteReplay {
    ReplayType type = 1;
    string filename = 2;
    ClientCommandsResponse response = 3;
}

message ReplayGalleryCommands {
    ReplayGalleryRequestGallery request_gallery = 1;
    ReplayGalleryResponseGallery response_gallery = 1000;
    ReplayGalleryRequestLoadReplay request_load_replay = 2;
    ReplayGalleryResponseLoadReplay response_load_replay = 1001;
    ReplayGalleryRequestMoveReplay request_move_replay = 3;
    ReplayGalleryResponseMoveReplay response_move_replay = 1002;
    ReplayGalleryRequestDeleteReplay request_delete_replay = 4;
    ReplayGalleryResponseDeleteReplay response_delete_replay = 1003;
}

enum ReplayType {
    AutoSave = 0;
    UserSaved = 1;
}

enum ReplayGalleryCommandsResponse {
    ReplayGalleryCommandsResponse_OK = 0;
    ReplayGalleryCommandsResponse_PositionNotValid = 1;
    ReplayGalleryCommandsResponse_InvalidReplay = 2;
    ReplayGalleryResponse_CRITICAL_ERROR = 100;
}
